# stock-management-assistant

./: .gitignore  AGENTS.md  README.md  automation.toml  memory.md  prompt.md  pyproject.toml
.github/workflows/: stock-agent.yml
config/: alert-policy.md  delivery.md  portfolio.md  research-policy.md  settings.json
docs/: automation-spec.md  cloud-setup.md
src/investment_agent/: __init__.py  __main__.py  alerts.py  config.py  formatting.py  interfaces.py  logging_config.py  models.py  notifications.py  orchestrator.py  research.py  store.py
src/investment_agent/providers/: __init__.py  openai_provider.py  placeholder.py
src/investment_agent/skills/: __init__.py  opportunities.py  opportunity_research.py  portfolio.py  portfolio_management.py  portfolio_research.py
src/investment_agent/storage/: __init__.py  json_store.py
tests/: test_agent.py  test_cli.py  test_config.py  test_json_storage.py  test_notifications.py  test_openai_provider.py  test_orchestrator.py  test_skills.py
