[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-investment-agent"
version = "0.1.0"
description = "Provider-neutral, cloud-ready investment research agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
investment-agent = "investment_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
