[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-investment-agent"
version = "1.0.0"
description = "Cloud portfolio tracking and catalyst-focused investment research agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
investment-agent = "investment_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
